# QuizApp

./: .gitignore  CMakeLists.txt  GuiApp.cpp  GuiApp.h  README.md  main.cpp  sample_questions.csv  toan_lop_1_25_cau.csv  vcpkg.json
docs/: SOURCE_STRUCTURE.md
firebase-seed/: .gitignore  grade1-e2e.js  migrate-users.js  package-lock.json  package.json  repair-demo-exam-ids.js  seed.js
release-clean/: README.txt
src/: Common.h
src/data/: QuizData.cpp  QuizData.h  QuizRepository.cpp  QuizRepository.h  QuizService.h
src/models/: Models.cpp  Models.h
src/security/: PasswordHasher.cpp  PasswordHasher.h
src/services/: AIQuestionService.cpp  AIQuestionService.h  FirebaseService.cpp  FirebaseService.h
src/ui/: ControlIds.h  Layout.h
src/ui/features/: AuthScreens.inl  DashboardScreens.inl  ExamScreens.inl  GuiCore.inl  GuiUtilities.inl  QuestionScreens.inl  ResultScreens.inl
test-results/: quiz-app-test-report.json  quiz-app-test-report.md
tests/: Capture-Grade1Layout.ps1  Capture-UiScreen.ps1  README.md  Run-Grade1EndToEnd.ps1  Run-QuizAppTests.ps1  Test-AntiCheatAltTab.ps1
tests/fixtures/: questions_vi.csv
